// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fonts should compile the _fonts.scss partial 1`] = `
"@font-face {
  font-family: 'ibm-plex-mono';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Italic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Italic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Italic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Italic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Italic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Italic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Italic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Italic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Regular-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Regular-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Regular-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Regular-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Regular-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Regular-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Regular-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Regular-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Italic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Italic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Italic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Italic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Italic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Italic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Italic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Italic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Light-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Light-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Light-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Light-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Light-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Light-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Light-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Light-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-LightItalic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-LightItalic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-LightItalic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-LightItalic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-LightItalic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-LightItalic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-LightItalic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-LightItalic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Regular-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Regular-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Regular-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Regular-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Regular-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Regular-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Regular-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Regular-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBold-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBold-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBold-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBold-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBold-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBold-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBold-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBold-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBoldItalic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBoldItalic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBoldItalic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBoldItalic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBoldItalic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBoldItalic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBoldItalic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBoldItalic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Italic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Italic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Italic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Italic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Italic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Italic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Italic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Italic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Light-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Light-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Light-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Light-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Light-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Light-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Light-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Light-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-LightItalic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-LightItalic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-LightItalic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-LightItalic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-LightItalic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-LightItalic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-LightItalic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-LightItalic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Regular-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Regular-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Regular-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Regular-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Regular-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Regular-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Regular-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Regular-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBold-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBold-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBold-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBold-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBold-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBold-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBold-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBold-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBoldItalic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBoldItalic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBoldItalic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBoldItalic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBoldItalic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBoldItalic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBoldItalic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBoldItalic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }
"
`;

exports[`fonts should compile the sass partial for font-family: Mono 1`] = `
"@font-face {
  font-family: 'ibm-plex-mono';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Italic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Italic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Italic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Italic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Italic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Italic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Italic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Italic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Regular-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Regular-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Regular-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Regular-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Regular-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Regular-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-mono';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Mono/web/woff2/IBMPlexMono-Regular-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Mono/web/woff/IBMPlexMono-Regular-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }
"
`;

exports[`fonts should compile the sass partial for font-family: Sans 1`] = `
"@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Italic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Italic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Italic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Italic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Italic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Italic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Italic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Italic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Light-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Light-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Light-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Light-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Light-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Light-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Light-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Light-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-LightItalic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-LightItalic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-LightItalic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-LightItalic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-LightItalic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-LightItalic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-LightItalic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-LightItalic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Regular-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Regular-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Regular-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Regular-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Regular-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Regular-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-Regular-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-Regular-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBold-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBold-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBold-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBold-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBold-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBold-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBold-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBold-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBoldItalic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBoldItalic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBoldItalic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBoldItalic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBoldItalic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBoldItalic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-sans';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Sans/web/woff2/IBMPlexSans-SemiBoldItalic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Sans/web/woff/IBMPlexSans-SemiBoldItalic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }
"
`;

exports[`fonts should compile the sass partial for font-family: Serif 1`] = `
"@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Italic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Italic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Italic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Italic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Italic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Italic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Italic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Italic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Light-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Light-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Light-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Light-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Light-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Light-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Light-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Light-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-LightItalic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-LightItalic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-LightItalic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-LightItalic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-LightItalic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-LightItalic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 300;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-LightItalic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-LightItalic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Regular-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Regular-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Regular-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Regular-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Regular-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Regular-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 400;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-Regular-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-Regular-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBold-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBold-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBold-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBold-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBold-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBold-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: normal;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBold-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBold-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBoldItalic-Latin1.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBoldItalic-Latin1.woff\\") format(\\"woff\\");
  unicode-range: 'U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+20AC, U+2122, U+2212, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBoldItalic-Latin2.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBoldItalic-Latin2.woff\\") format(\\"woff\\");
  unicode-range: 'U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF, U+FB01-FB02'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBoldItalic-Latin3.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBoldItalic-Latin3.woff\\") format(\\"woff\\");
  unicode-range: 'U+0102-0103, U+1EA0-1EF9, U+20AB'; }

@font-face {
  font-family: 'ibm-plex-serif';
  font-style: italic;
  font-weight: 600;
  src: url(\\"../fonts/Serif/web/woff2/IBMPlexSerif-SemiBoldItalic-Pi.woff2\\") format(\\"woff2\\"), url(\\"../fonts/Serif/web/woff/IBMPlexSerif-SemiBoldItalic-Pi.woff\\") format(\\"woff\\");
  unicode-range: 'U+03C0, U+0E3F, U+2070, U+2074-2079, U+2080-2089, U+2113, U+2116, U+2126, U+212E, U+2150-2151, U+2153-215E, U+2190-2199, U+21A9-21AA, U+21B0-21B3, U+21B6-21B7, U+21BA-21BB, U+21C4, U+21C6, U+2202, U+2206, U+220F, U+2211, U+221A, U+221E, U+222B, U+2248, U+2260, U+2264-2265, U+25CA, U+2713, U+274C, U+2B0E-2B11, U+EBE1, U+EBE3-EBE4, U+EBE6-EBE7, U+ECE0, U+EFCC'; }
"
`;
